centrage du site, modif css

--- a/style.css
+++ b/style.css
@@ -1,13 +1,16 @@
 .head{
 		position: absolute;
-		 z-index: 2;
+		 z-index: 1;
   	width: 100%;
 
 }
 
 body{
 		position: absolute;
+		 left: 50%;
+		transform: translate(-50%);
 	 	width: 100%;
+	 text-align: center;
 		padding-top: 50px;
 }
 
