--- a/css/styles.less
+++ b/css/styles.less
@@ -7,6 +7,7 @@
 @color-linkedin: #0077B5;
 @color-twitter: #1C9CEA;
 @color-mail: #303030;
+@color-discord: #7389DC;
 
 .fontBase {
 	font-family: "Raleway", sans-serif;
@@ -187,7 +188,7 @@ body {
 				height: 100%;
 				color: @color-blanc-gris;
 				display: flex;
-				i { margin: 50px auto; }
+				i { margin: 40px auto; }
 			}
 			&:hover {
 				background-color: @color-blanc-gris;
@@ -202,7 +203,7 @@ body {
 		.linkedin {.reseau(@color-linkedin);}
 		.twitter {.reseau(@color-twitter);}
 		.mail {.reseau(@color-mail);}
-
+		.discord {.reseau(@color-discord);}
 	}
 
 }
