--- a/css/styles.less
+++ b/css/styles.less
@@ -164,6 +164,12 @@ body {
 
 .ligne#bureau{
 	background-color: @color-rouge-miage;
+
+	#trombi{
+		margin: auto;
+	}
+
+	padding-bottom: 20px;
 }
 
 .ligne#contact{
