--- a/css/styles.less
+++ b/css/styles.less
@@ -2,11 +2,11 @@
 @color-rouge-miage: #CA182F;
 @color-blanc-gris: #eee;
 
-@color-snapchat: #F7F400;
+@color-snapchat: #CFCC00;
 @color-facebook: #4267B2;
 @color-linkedin: #0077B5;
 @color-twitter: #1C9CEA;
-@color-mail: #303030;
+@color-darkGrey: #303030;
 @color-discord: #7389DC;
 
 .fontBase {
@@ -163,24 +163,24 @@ body {
 }
 
 .ligne#bureau{
-	background-color: @color-rouge-miage;
+	background-color: @color-darkGrey;
 
 	#trombi{
 		margin: auto;
 	}
 
-	padding-bottom: 20px;
+	padding-bottom: 40px;
 }
 
 .ligne#contact{
-	background-color: @color-mail;
+	background-color: @color-rouge-miage;
 
 	.container{
 		flex-direction: row;
 
 		.contactezNous{
 			.lineTitle;
-			color: @color-blanc-gris;
+			color: #fff;
 			margin-right: 30px;
 
 		}
@@ -192,12 +192,12 @@ body {
 			a {
 				width: 100%;
 				height: 100%;
-				color: @color-blanc-gris;
+				color: #fff;
 				display: flex;
 				i { margin: 40px auto; }
 			}
 			&:hover {
-				background-color: @color-blanc-gris;
+				background-color: #fff;
 				a {
 					color: @couleurReseau !important;
 				}
@@ -208,7 +208,7 @@ body {
 		.facebook {.reseau(@color-facebook);}
 		.linkedin {.reseau(@color-linkedin);}
 		.twitter {.reseau(@color-twitter);}
-		.mail {.reseau(@color-mail);}
+		.mail {.reseau(@color-rouge-miage);}
 		.discord {.reseau(@color-discord);}
 	}
 
