changed footer appearance

--- a/css/styles.less
+++ b/css/styles.less
@@ -217,7 +217,8 @@ body {
 .ligne#footer{
 	text-align: left !important;
 	color: @color-blanc-gris;
-	background-color: #202020;
+	background-color: #1A252F;
+	padding: 15px 0 40px 0;
 
 	.container {
 		display: flex;
