j'ai ajouté des fondus parce que j'aime la fondue

--- a/css/styles.less
+++ b/css/styles.less
@@ -147,6 +147,7 @@ body {
 
 		background-color: @color-bleu-miage;
 		transition: all 0.3s ease;
+		margin-bottom: 2rem;
 
 		&:hover, &:focus {
 			//transform: scale(1.05);
@@ -164,6 +165,7 @@ body {
 			height: 400px;
 			object-fit: cover;
 			object-position: top left;
+			transition: opacity 0.2s;
 		}
 
 		.content{
@@ -250,6 +252,7 @@ body {
 			border: 3px solid @color-bleu-miage;
 			border-radius: 5px;
 			padding: 10px;
+			transition: background-color 0.2s;
 
 			&:hover {
 				background-color: @color-bleu-miage;
