css fix footer color

--- a/css/styles.less
+++ b/css/styles.less
@@ -368,7 +368,7 @@ body {
 .ligne#footer{
 	text-align: left !important;
 	color: @color-blanc-gris;
-	background-color: darken(#3E4551,10);
+	background-color: darken(@color-bleu-miage,8);
 	padding: 15px 0 25px 0;
 
 	.container {
